# physio-swarm-protocol

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml
docs/: SELF_REVIEW.md
docs/plans/: 2026-03-11-physio-swarm-core-upgrade.md  2026-03-11-physio-swarm-protocol-repo.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md
examples/: research_assistant_demo.py
examples/workflows/: research-assistant.toml
physioswarm/: __init__.py  adapters.py  cells.py  cli.py  config_runner.py  distributed.py  embeddings.py  event_store.py  latent_model.py  memory.py  organs.py  registry.py  runtime.py  scheduler.py  signal_bus.py  topology.py  types.py  vector_bus.py  workflow.py
scripts/: run_workflow.py
skills/physio-swarm-architect/: SKILL.md
skills/physio-swarm-architect/references/: protocol.md  runtime.md
tests/: test_cluster.py  test_config_runner.py  test_demo.py  test_distributed.py  test_event_store.py  test_latent_model.py  test_memory.py  test_provider_adapter.py  test_recovery.py  test_registry.py  test_runtime.py  test_scheduler.py  test_signal_bus.py  test_skill.py  test_topology.py  test_types.py  test_vector_bus.py  test_workflow.py
